--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -25,7 +25,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v4
         with:
-          images: ghcr.io/${{ github.repository }}/qr-generator
+          images: ghcr.io/${{ github.repository }}
           tags: |
             type=raw,value=latest
       - name: Build and push
